k8s/resources/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: docker.io/ollama/ollama:0.13.0
        ports:
        - containerPort: 11434
          name: http
        resources:
          requests:
            cpu: "5"
            memory: "10Gi"
          limits:
            cpu: "20"
            memory: "13Gi"
        volumeMounts:
          - name: ollama-data
            mountPath: /root/.ollama
            readOnly: false
        #resources:
        #  limits:
        #    nvidia.com/gpu: 1
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data
