k8s/resources/ollama/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ollama.localhost`)
      kind: Rule
      services:
        - name: ollama
          port: 80
